--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./src/index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -13,5 +13,14 @@
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "nodemon": "^2.0.8"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/andrekancelskis/Api-nodeJs.git"
+  },
+  "bugs": {
+    "url": "https://github.com/andrekancelskis/Api-nodeJs/issues"
+  },
+  "homepage": "https://github.com/andrekancelskis/Api-nodeJs#readme"
 }
